Added advanced options and preview

--- a/app/web/views/users/cameras/camera_modal.erb
+++ b/app/web/views/users/cameras/camera_modal.erb
@@ -82,6 +82,7 @@
               <div class="col-sm-8">
                 <img id="cameraPreview" class="preview" src="" width="265px" height="175px">
                 <label>Click on preview area above to refresh</label>
+                <p id="previewError" class="text-danger" style="display: none">Can't connect to camera, please check advanced options.</p>
               </div>
             </div>
 
