--- a/app/web/views/users/cameras/camera_view.erb
+++ b/app/web/views/users/cameras/camera_view.erb
@@ -131,9 +131,9 @@
       <div class="activity">
         <h3>Activity</h3>
 
-        <% @camera.activities.each do |a| %>
+        <% @camera.activities.reverse_order(:done_at).limit(30).each do |a| %>
           <div>
-            <%= a.action %> <b><%= @camera.exid -%></b> at <%= a.done_at -%> from <%= a.ip -%>
+            <%= a -%>
           </div>
         <% end %>
       </div>
