--- a/app/web/views/users/user_profile.erb
+++ b/app/web/views/users/user_profile.erb
@@ -17,6 +17,17 @@
         <input type="email" value="<%= @user.email -%>" class="form-control" id="userEmail" placeholder="Enter email">
       </div>
 
+      <div class="form-group">
+        <label for="country">Country</label>
+        <select id="country" name="country" class="form-control is-required">
+          <% @countries.each do |c| %>
+          <option value="<%= c.iso3166_a2 -%>" <% if c == @user.country %>selected="selected"<% end %>>
+            <%= c.name -%>
+          </option>
+          <% end %>
+        </select>
+      </div>
+
       <div class="alert alert-danger" id="userProfileErrors" style="display: none">
         <strong>Error!</strong> <span class="alert-content"></span>
       </div>
@@ -54,6 +65,10 @@
         if (user.data.email !== $('#userEmail').val()) {
           user.data.email = $('#userEmail').val();
           toUpdate.push('email');
+        }
+        if (user.data.country !== $('#country').val()) {
+          user.data.country = $('#country').val();
+          toUpdate.push('country');
         }
         user.update(toUpdate)
         .done(function() {
