--- a/app/web/views/users/cameras/camera_modal.erb
+++ b/app/web/views/users/cameras/camera_modal.erb
@@ -22,7 +22,7 @@
               <label for="cameraId" class="col-sm-3 control-label">Camera ID:</label>
               <div class="col-sm-8">
                 <input type="text" class="form-control" value="" id="cameraId" name="cameraId" placeholder="Camera ID">
-                <p>This must be unique to Evercam</p>
+                <p>This must be unique to Evercam. It can only contain lower case letters, numbers, hyphens and underscore.</p>
               </div>
             </div>
 
