Model change bugfix

--- a/app/web/views/users/cameras/camera_view.erb
+++ b/app/web/views/users/cameras/camera_view.erb
@@ -170,7 +170,9 @@
           }
           if (camera.data.model !== $('#cameraModel' + $('#cameraVendor').val()).val()) {
             camera.data.model = $('#cameraModel' + $('#cameraVendor').val()).val();
+            camera.data.vendor = $('#cameraVendor').val();
             toUpdate.push('model');
+            toUpdate.push('vendor');
           }
 
           camera.update(toUpdate)
