--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -8,7 +8,6 @@
 <body>
 <div id='wrapper'>
 
-  <%= partial 'layouts/_header'.to_sym %>
 
   <div class='main'>
     <div id='content'>
@@ -48,7 +47,7 @@
             <i class='fa fa-link'></i>
             Connect
             <ul>
-              <li><a href="https://github.com/evercam/android.connect" target="_new">Android Connect</a></li>
+              <li><a href="http://blog.evercam.io/blog/evercam-connect/" target="_new">Android Connect</a></li>
           </ul>
         </div>
 
@@ -82,7 +81,6 @@
     &nbsp;
   </div>
 
-  <%= partial 'layouts/_footer'.to_sym %>
 
 </div>
 </body>
