Removed 3scale for now, cleaned up headers and docs

--- a/app/web/views/layouts/docs.erb
+++ b/app/web/views/layouts/docs.erb
@@ -23,7 +23,7 @@
             API V1
             <ul>
               <li><a href='/docs/api/v1/authentication'>Authentication</a></li>
-              <li><a href='/docs/api/v1/swagger'>Endpoints</a></li>
+              <li><a href='/docs/api/v1/swagger'>Docs</a></li>
               <li><a href='/docs/api/clients/evercam.js'>evercam.js</a></li>
             </ul>
             </li>
