--- a/app/web/views/oauth2/authorize.erb
+++ b/app/web/views/oauth2/authorize.erb
@@ -11,6 +11,7 @@
 <br />
 <div>
   <form method='POST'>
+    <input type="hidden" name="redirect_uri" value="@req.redirect_uri"></input>
     <button type='submit' name='action' value='approve' class='btn btn-success'>
       Approve
     </button>
