--- a/app/web/views/oauth2/authorize.erb
+++ b/app/web/views/oauth2/authorize.erb
@@ -11,7 +11,9 @@
 <br />
 <div>
   <form method='POST'>
-    <input type="hidden" name="redirect_uri" value="@req.redirect_uri"></input>
+    <input type="hidden" name="redirect_uri" value="@redirect_uri"></input>
+    <input type="hidden" name="redirect_uri" value="@client_id"></input>
+    <input type="hidden" name="scope" value="@scope"></input>
     <button type='submit' name='action' value='approve' class='btn btn-success'>
       Approve
     </button>
